Working REST mockup

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -7,6 +7,9 @@
     </h:head>
     <h:body>
         Hello from Facelets
+        
+        <br />
+        <a href="http://master.uials.no:8080/muldvarp/resources/course">Course REST</a>
     </h:body>
 </html>
 
