--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -10,6 +10,8 @@
         
         <br />
         <a href="http://master.uials.no:8080/muldvarp/resources/course">Course REST</a>
+        <br />
+        <a href="http://master.uials.no:8080/muldvarp/resources/video">Video REST</a>
     </h:body>
 </html>
 
