Web editor for news

--- a/src/main/webapp/newArticle.xhtml
+++ b/src/main/webapp/newArticle.xhtml
@@ -22,88 +22,38 @@
             </hgroup>
         </header>
 
-        <h:form id="menu">  
-
-            <p:growl id="messages"/>  
-
-            <p:menubar>  
-                <p:submenu label="File" icon="ui-icon-document">  
-                    <p:submenu label="New" icon="ui-icon-contact">  
-                        <p:menuitem value="Project" url="#" />  
-                        <p:menuitem value="Other" url="#" />  
-                    </p:submenu>  
-                    <p:menuitem value="Open" url="#" />  
-                    <p:separator />  
-                    <p:menuitem value="Quit" url="#" />  
-                </p:submenu>  
-
-                <p:submenu label="Edit" icon="ui-icon-pencil">  
-                    <p:menuitem value="Undo" url="#" icon="ui-icon-arrowreturnthick-1-w" />  
-                    <p:menuitem value="Redo" url="#" icon="ui-icon-arrowreturnthick-1-e" />  
-                </p:submenu>  
-
-                <p:submenu label="Help" icon="ui-icon-help">  
-                    <p:menuitem value="Contents" url="#" />  
-                    <p:submenu label="Search" icon="ui-icon-search">  
-                        <p:submenu label="Text">  
-                            <p:menuitem value="Workspace" url="#" />  
-                        </p:submenu>  
-                        <p:menuitem value="File" url="#" />  
-                    </p:submenu>  
-                </p:submenu>  
-
-                <p:submenu label="Actions" icon="ui-icon-gear">  
-                    <p:submenu label="Ajax" icon="ui-icon-refresh">  
-                        <p:menuitem value="Save" actionListener="#{buttonBean.save}" icon="ui-icon-disk" update="messages"/>  
-                        <p:menuitem value="Update" actionListener="#{buttonBean.update}" icon="ui-icon-arrowrefresh-1-w" update="messages"/>  
-                    </p:submenu>  
-                    <p:submenu label="Non-Ajax" icon="ui-icon-newwin">  
-                        <p:menuitem value="Delete" actionListener="#{buttonBean.delete}" icon="ui-icon-close" update="messages" ajax="false"/>  
-                    </p:submenu>  
-                </p:submenu>  
-
-                <p:menuitem value="Quit" url="http://www.primefaces.org" icon="ui-icon-close" />  
-            </p:menubar>  
-
-        </h:form>  
-
+        
         <f:view>
             <section>
 
                 <h:form id="form1">
-                    <p:panelGrid columns="2">  
-                        <f:facet name="header">  
-                            Basic PanelGrid  
-                        </f:facet>  
+                    <p:panelGrid columns="2" >  
+                        <p:panelGrid columns="2" >  
+                            <f:facet name="header">  
+                                Basic PanelGrid  
+                            </f:facet>  
 
-                        <h:outputLabel for="title" value="Title: *" />  
-                        <p:inputText id="title" value="" required="true" label="Title" />  
+                            <h:outputLabel for="title" value="Title: *" />  
+                            <p:inputText id="title" value="#{ArticleController.article.title}" required="true" label="Title" />  
 
-                        <h:outputLabel for="date" value="Date: *" />  
-                        <p:inputText id="date" value="" required="false" label="Date"/>  
+                            <h:outputLabel for="date" value="Date: *" />  
+                            <p:inputText id="date" value="" required="false" label="Date"/>  
 
-                        <h:outputLabel for="author" value="Author: *" />  
-                        <p:inputText id="author" value="" required="false" label="Author"/> 
+                            <h:outputLabel for="author" value="Author: *" />  
+                            <p:inputText id="author" value="" required="false" label="Author"/> 
 
-                        <h:outputLabel for="category" value="Category: *" />  
-                        <p:inputText id="category" value="" required="false" label="Category"/>  
+                            <h:outputLabel for="category" value="Category: *" />  
+                            <p:inputText id="category" value="" required="false" label="Category"/>  
 
-                        <h:outputLabel for="ingress" value="Ingress: *" /> 
-                        <p:inputTextarea id="ingress" value="" required="false" rows="5" cols="30"/>  
-
-                        <f:facet name="footer">  
-                            <p:commandButton type="button" value="Save" icon="ui-icon-check" style="margin:0"/>  
-                        </f:facet>  
-                    </p:panelGrid> 
-                </h:form>
-
-
-                <h:form id="form2">
-                    <p:editor id="editor" value="#{articleController.body}" width="790" height="323" />  
-
+                            <h:outputLabel for="ingress" value="Ingress: *" /> 
+                            <p:inputTextarea id="ingress" value="" required="false" rows="5" cols="30"/>  
+                        </p:panelGrid>                      
+                    
+                        <p:editor id="editor" value="#{articleController.article.text}" width="790" height="322" />  
+                    </p:panelGrid>
                     <h:panelGrid columns="2" style="margin-top:10px">  
                         <p:commandButton id="submitButton" value="Submit" update="display"
-                                         actionListener="#{articleController.saveArticle()}"  
+                                         actionListener="#{articleController.addArticle()}"
                                          icon="ui-icon-disk" />  
                         <p:commandButton id="clearButton" type="button" value="Clear" onclick="editor.clear()"  
                                          icon="ui-icon-close" />  
