Committing a simple get method to get the library service up and running.

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -12,6 +12,8 @@
         <a href="http://master.uials.no:8080/muldvarp/resources/course">Course REST</a>
         <br />
         <a href="http://master.uials.no:8080/muldvarp/resources/video">Video REST</a>
+        <br />
+        <a href="http://master.uials.no:8080/muldvarp/resources/library">Library REST</a>
     </h:body>
 </html>
 
