--- a/src/main/webapp/listCourses.xhtml
+++ b/src/main/webapp/listCourses.xhtml
@@ -7,7 +7,7 @@
     xmlns:c="http://java.sun.com/jsp/jstl/core">
 
     <ui:define name="title">
-        Edit Course
+        List of Courses
     </ui:define>
     
     <ui:define name="right">
@@ -16,14 +16,15 @@
                 <p:dataTable
                     id="courseTable"
                     value="#{courseController.courses}" 
-                    var="courses">
+                    var="course">
                     <p:column headerText="Name">  
                         <h:commandLink 
-                            action="#{courseController.setSelected(courses)}" 
-                            value="#{courses.name}" />
+                            action="#{courseController.setSelected(course)}" 
+                            value="#{course.name}" />
                     </p:column>
                 </p:dataTable>          
             </p:fieldset>
+            <p:commandButton value="Make testdata" action="#{courseController.makeTestData()}" update="courseTable"/>
         </h:form>
     </ui:define>
    
