--- a/src/main/webapp/template.xhtml
+++ b/src/main/webapp/template.xhtml
@@ -10,7 +10,7 @@
     </h:head>
     <h:body>
         <div id="container">
-            <div id="header">
+            <div id="news">
                 <div id="login" style="position: absolute; top: 10px; right:160px;">
                     
                 </div>
