--- a/src/main/webapp/listCourses.xhtml
+++ b/src/main/webapp/listCourses.xhtml
@@ -22,6 +22,9 @@
                             action="#{courseController.setSelected(course)}" 
                             value="#{course.name}" />
                     </p:column>
+                    <p:column headerText="Name">  
+                        <h:outputText value="#{course.revision}" />
+                    </p:column>
                 </p:dataTable>          
             </p:fieldset>
             <p:commandButton value="Make testdata" action="#{courseController.makeTestData()}" update="courseTable"/>
