--- a/src/main/webapp/editCourse.xhtml
+++ b/src/main/webapp/editCourse.xhtml
@@ -48,6 +48,12 @@
                                 <p:column headerText="Done">  
                                     <h:outputText value="#{tasks.done}" />
                                 </p:column>
+                                <p:column>
+                                    <p:commandButton value="Edit" action="#{courseController.editCourse()}" update="taskTable"/>
+                                </p:column>
+                                <p:column>
+                                    <p:commandButton value="Delete" action="#{courseController.removeTask(themes, tasks)}" update="taskTable"/>
+                                </p:column>
                             </p:dataTable>
                             <p:row>
                                 <p:column>  
@@ -57,6 +63,12 @@
                                     <p:commandButton value="Add Task" action="#{courseController.addTask(themes)}" update="taskTable"/>
                                 </p:column>
                             </p:row>
+                        </p:column>
+                        <p:column>
+                            <p:commandButton value="Edit" action="#{courseController.editCourse()}" update="themeTable"/>
+                        </p:column>
+                        <p:column>
+                            <p:commandButton value="Delete" action="#{courseController.removeTheme(themes)}" update="themeTable"/>
                         </p:column>
                     </p:dataTable>
                     <p:row>
@@ -84,6 +96,12 @@
                         <p:column headerText="Accepted Date">  
                             <h:outputText value="#{obligtasks.acceptedDate}" />
                         </p:column>
+                        <p:column>
+                            <p:commandButton value="Edit" action="#{courseController.editCourse()}" update="obligTable"/>
+                        </p:column>
+                        <p:column>
+                            <p:commandButton value="Delete" action="#{courseController.removeObligatoryTask(obligtasks)}" update="obligTable"/>
+                        </p:column>
                     </p:dataTable>
                     <p:row>
                         <p:column>  
@@ -110,6 +128,12 @@
                         <p:column headerText="Date">  
                             <h:outputText value="#{exams.examDate}" />
                         </p:column>
+                        <p:column>
+                            <p:commandButton value="Edit" action="#{courseController.editCourse()}" update="examTable"/>
+                        </p:column>
+                        <p:column>
+                            <p:commandButton value="Delete" action="#{courseController.removeExam(exams)}" update="examTable"/>
+                        </p:column>
                     </p:dataTable>
                     <p:row>
                         <p:column>  
@@ -122,8 +146,9 @@
                 </p:column>
             </p:dataTable>
             </p:fieldset>
-            <p:commandButton value="Register" action="#{courseController.addCourse()}"/>
-            <p:commandButton value="Delete" action="#{courseController.removeCourse(course)}"/>
+            <p:commandButton value="Save" action="#{courseController.addCourse()}"/>
+            <p:commandButton value="New Revision" action="#{courseController.editCourse()}"/>
+            <p:commandButton value="Delete" action="#{courseController.removeCourse()}"/>
         </h:form>
     </ui:define>
     
