--- a/src/main/webapp/news.xhtml
+++ b/src/main/webapp/news.xhtml
@@ -4,7 +4,8 @@
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:p="http://primefaces.org/ui"
-      xmlns:f="http://java.sun.com/jsf/core">
+      xmlns:f="http://java.sun.com/jsf/core"
+      xmlns:c="http://java.sun.com/jsp/jstl/core">
 
     <h:head>  
         <link rel="stylesheet" type="text/css" 
@@ -18,32 +19,38 @@
     </h:head>
     <h:body>
 
-            <div id="news">
-                <h1>
-                    <a href="./">Hials nyheter</a>
-                </h1>
-                <div id="nav">
-                    <ul>
-                        <li>
-                            <a href="http://m.db.no/?www=1"><img src="img/hialsBilde.jpg" height="25px" width="25px" alt="some_text"/>
-                                Tittel<br/>
-                                <div id="ingress">
-                                blablablabl abbaba babababa bababba bababba baba babb
-                                ababa bbabab ababb abababab ababa bab bababa babab abab
-                                ababa bab ababba ababab babab abababab ababa bababababa
-                                aaaaaaaaaaaaaaaaaaaaaaaaaaaaaa&shy;aaaaaaaaaaaaaaaaaaaaaaaa
-                                </div>  
-                            </a>
-                        </li>
-                        <li><a href="#">Nyhet1</a></li>
-                        <li><a href="#">Nyhet2</a></li>
-                        <li><a href="#">Nyhet3</a></li>
-                        <li><a href="#">Nyhet4</a></li>
-                        <li><a href="#">Nyhet5</a></li>
-                        <li><a href="#">Nyhet6</a></li>
-                    </ul>
-                </div>
-            </div>
+        <div id="news">
+            <h1>
+                <a href="./">Hials nyheter</a>
+            </h1>
+
+            <ul>
+                <c:forEach items="#{articleController.mostRecentArticles}" var="article">
+                    <li>
+                        <a href="article.xhtml?articleid=#{article.id}"><img src="img/hialsBilde.jpg" height="25px" width="25px" alt="some_text"/>
+                            <h:outputText value="#{article.title}"/><br/>
+                            <div id="ingress">
+                                <h:outputText value="#{article.ingress}"/>
+                            </div>  
+                        </a>
+                    </li>
+                    <li>
+                        <a href="article.xhtml?articleid=#{article.id}"><img src="img/hialsBilde.jpg" height="25px" width="25px" alt="some_text"/>
+                            <h:outputText value="#{article.title}"/><br/>
+                            <div id="ingress">
+                                <h:outputText value="#{article.ingress}"/>
+                            </div>  
+                        </a>
+                    </li>                    
+                    <li><a href="#">Nyhet1</a></li>
+                    <li><a href="#">Nyhet2</a></li>
+                    <li><a href="#">Nyhet3</a></li>
+                    <li><a href="#">Nyhet4</a></li>
+                    <li><a href="#">Nyhet5</a></li>
+                    <li><a href="#">Nyhet6</a></li>
+                </c:forEach>
+            </ul>
+        </div>
     </h:body>
 </html>
 
