Get article text from database

--- a/src/main/webapp/article.xhtml
+++ b/src/main/webapp/article.xhtml
@@ -24,35 +24,11 @@
                 <p>
                     #{articleController.oldArticle.text}
                 </p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                    Sed venenatis ligula vitae neque elementum porta. 
-                    Vivamus dapibus nunc vel orci rhoncus volutpat vel vel nulla. 
-                    Praesent cursus, dolor ac faucibus commodo, tortor diam pellentesque turpis, 
-                    aliquet convallis augue nulla id eros. Ut est felis, molestie eu feugiat et, 
-                    faucibus eget ante. Maecenas dui mi, scelerisque in tristique sit amet, 
-                    pellentesque non massa. Sed venenatis neque vitae arcu placerat a 
-                    interdum nulla tempus. Mauris nec magna sit amet libero viverra bibendum. 
-                    Ut condimentum, risus eget suscipit hendrerit, diam metus aliquam enim, 
-                    sed consectetur urna magna et massa. Aliquam quam mauris, lobortis in 
-                    fringilla vitae, rhoncus vitae turpis. Mauris sodales tempus ullamcorper. 
-                    Sed mattis magna quis est gravida commodo. Etiam placerat, 
-                    nulla eget tincidunt rutrum, ligula arcu mollis massa, quis pellentesque 
-                    diam elit nec ante. Cras velit orci, suscipit a rhoncus in, sagittis non ante. 
+                <p>
+                    #{articleController.oldArticle.text}
                 </p>
                 <p>
-                    Vivamus nec elementum mauris. Suspendisse porttitor quam ut nulla dictum ac 
-                    commodo leo sollicitudin. Nam id erat elit. Nam lacinia consequat imperdiet. 
-                    Nunc sem nibh, scelerisque nec lacinia quis, tincidunt eu nisi. 
-                    Donec volutpat risus sed augue ullamcorper eget interdum neque pellentesque. 
-                    Nullam aliquet ligula auctor diam porta et lobortis massa tempor. 
-                    Nullam massa ipsum, condimentum non adipiscing id, consectetur in urna. 
-                    Nullam lobortis rutrum sem, in tempor mauris elementum id. Pellentesque venenatis 
-                    dui quis augue iaculis eu iaculis enim dapibus. Morbi gravida, sem euismod 
-                    sodales sodales, odio justo imperdiet tellus, non cursus tortor ante sed lacus. 
-                    Proin nec tempor sem. Fusce egestas neque nec arcu tristique in cursus 
-                    ligula tincidunt. Sed rhoncus mauris vel ante hendrerit ullamcorper. 
-                    Sed congue dui a magna rutrum semper. Duis varius elit ac risus molestie id 
-                    tincidunt ligula dictum. 
+                    #{articleController.oldArticle.text}
                 </p>
             </div>
     </h:body>
